--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,17 @@
 
+bfsMaps 0.9.5 or (1.0 RC?) (2020-06-17)
+-----------------------------
+
+NEW FUNCTIONS ADDED:
+  * 
+
+UPDATED FUNCTIONS:
+  * 
+
+BUGFIXES:
+
+
+
 bfsMaps 0.9.4 (2020-04-17)
 -----------------------------
 
