--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,18 @@
 
+bfsMaps 0.9.5 (2020-05-17)
+-----------------------------
+
+NEW FUNCTIONS ADDED:
+  *
+
+UPDATED FUNCTIONS:
+  * rgeos is now suggested for convenience.
+
+BUGFIXES:
+  * par must not be reset in PlotMapDot()
+
+
+
 bfsMaps 0.9.4 (2020-04-17)
 -----------------------------
 
