--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ bfsMaps 0.9.5 (2020-05-17)
 -----------------------------
 
 NEW FUNCTIONS ADDED:
-  *
+  * RemoveHoles() would remove polygons within others.
 
 UPDATED FUNCTIONS:
   * rgeos is now suggested for convenience.
