--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,20 @@
 
 
+bfsMaps 0.9.6 (2021-01-08)
+-----------------------------
 
-bfsMaps 0.9.5 (2020-12-06)
+NEW FUNCTIONS ADDED:
+  *
+
+UPDATED FUNCTIONS:
+  *
+
+BUGFIXES:
+  * Encoding for d.bfsrg had not been set correctly.
+
+
+
+bfsMaps 0.9.5 (2020-12-08)
 -----------------------------
 
 NEW FUNCTIONS ADDED:
