--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,17 @@
 
+bfsMaps 0.9.7 (2021-02-16)
+-----------------------------
+
+NEW FUNCTIONS ADDED:
+  *
+
+UPDATED FUNCTIONS:
+  *
+
+BUGFIXES:
+  *
+
+
 
 bfsMaps 0.9.6 (2020-12-16)
 -----------------------------
