--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,13 @@
 
-bfsMaps 0.9.7 (2021-02-16)
+bfsMaps 0.9.7 (2022-09-16)
 -----------------------------
 
-NEW FUNCTIONS ADDED:
-  *
-
 UPDATED FUNCTIONS:
-  *
+  * BfsStamp() uses the option "bfsMaps.year" to define the year.
+  * Some changes due to changes on the side of BfS.
+  * Change to UTF-8 due to CRAN requirements.
 
-BUGFIXES:
-  *
+
 
 
 
